# foodie

./: AGENTS.md  AGENT_TEST_SCRIPTS.md  CLAUDE.md  DEMO_SCRIPT.md  README.md  limitstion.md  project_plan.md  question.md
backend/: .env.example  .gitignore  PROJECT_PLAN.md  README.md  VAPI_AGENT_DESIGN.md  VAPI_SMOKE_EVAL_SETUP.md  pyproject.toml  seed.py  smoke_test.py  test_calls.py  test_compliance.py  test_config.py  test_customer_history.py  test_db.py  test_event_hub.py  test_item_resolver.py  test_orders.py  test_resolution.py  test_resolution_integration.py  test_seed.py  test_sse_e2e.py  test_startup_degraded.py  test_vapi_agent_prompt.py  vapi_agent_design.md
backend/app/: config.py  db.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: calls.py  customers.py  demo.py  orders.py  products.py
backend/app/services/: call_service.py  compliance.py  customer_history.py  event_hub.py  item_resolver.py  orders.py  resolution.py  vapi_client.py
backend/scripts/: demo_check.sh  test.sh
backend/tests/: test_calls.py  test_customer_history.py  test_item_resolver.py
frontend/: .env.example  .gitignore  package-lock.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/calls/: loading.tsx  page.tsx
frontend/app/catalog/: page.tsx
frontend/app/customers/: loading.tsx  page.tsx
frontend/app/orders/: loading.tsx  page.tsx
frontend/components/: DemoResetButton.tsx  Sidebar.tsx  ui.tsx
frontend/lib/: api.ts  types.ts
(+4 files in other folders)
