[project]
name = "supermarket-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for the AI phone call sales assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "certifi>=2026.4.22",
    "motor>=3.5",
    "pymongo>=4.8",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "faker>=27.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "mongomock>=4.3",
]
